hw2/compiling_error.txt
D:\Users\ndsoc\Documents\Junior Year\AppliedDataStructures\hw2\quicksort.cpp: In function 'int* quicksort(int*, int, int)':
D:\Users\ndsoc\Documents\Junior Year\AppliedDataStructures\hw2\quicksort.cpp:16:12: error: declaration of 'int* L' shadows a parameter
       int *L = new int[(R+1)];
            ^
D:\Users\ndsoc\Documents\Junior Year\AppliedDataStructures\hw2\quicksort.cpp:17:12: error: declaration of 'int* R' shadows a parameter
       int *R = new int[(R+1)];
            ^
D:\Users\ndsoc\Documents\Junior Year\AppliedDataStructures\hw2\quicksort.cpp:17:24: error: expression in new-declarator must have integral or enumeration type
       int *R = new int[(R+1)];
                        ^
D:\Users\ndsoc\Documents\Junior Year\AppliedDataStructures\hw2\quicksort.cpp:19:26: error: invalid operands of types 'int' and 'int*' to binary 'operator%'
       int num = a[rand() % R + 1];
                   ~~~~~~~^~~
D:\Users\ndsoc\Documents\Junior Year\AppliedDataStructures\hw2\quicksort.cpp:21:15: error: invalid conversion from 'int*' to 'int' [-fpermissive]
       int i = L;
               ^
D:\Users\ndsoc\Documents\Junior Year\AppliedDataStructures\hw2\quicksort.cpp:22:15: error: invalid conversion from 'int*' to 'int' [-fpermissive]
       int j = R;
               ^
